# wiki-know

./: .gitignore  README.md  app_functions.py  app_helper.py  config.example.json  hello.py  modernization.md  pyproject.toml  s3up.sh  sample_and_archive.py
migration/: MIGRATION_README.md  README.md  aws_config.md  imgur_migration.py  test_migration.py
static/report/1366565886Banner.design/: ecom.tsv  meta.csv  reportA.html  reportB.html  reportD.html  reportE.html  screenshots.csv  show.html  val_lookup.csv  winner.txt
static/report/1366633266DblinCntrlNLnl/: ecom.tsv  meta.csv  reportA.html  reportB.html  reportD.html  reportE.html  screenshots.csv  show.html  val_lookup.csv  winner.txt
static/report/1366636382bannerType/: ecom.tsv  meta.csv  reportA.html  reportB.html  reportD.html  reportE.html  screenshots.csv  show.html  val_lookup.csv  winner.txt
static/report/1366638601vares/: ecom.tsv  meta.csv  reportA.html  reportB.html  reportD.html  reportE.html  screenshots.csv  show.html  val_lookup.csv
static/report/1366645609color/: ecom.tsv  meta.csv  reportA.html  reportB.html  reportD.html  reportE.html  screenshots.csv  show.html  val_lookup.csv
static/report/1366653417var/: ecom.tsv  meta.csv  reportA.html  reportB.html  reportD.html  reportE.html  screenshots.csv  show.html  val_lookup.csv  winner.txt
static/report/1366654154var/: ecom.tsv  meta.csv  reportA.html  reportB.html  reportD.html  reportE.html  screenshots.csv  show.html  winner.txt  (+1 more)
templates/: base.html  directory_guess.html  directory_noguess.html  guess.html  result.html  welcome.html
(+520 files in other folders)
