[project]
name = "wiki-guess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.15",
    "flask>=3.1.2",
    "flask-basicauth>=0.2.0",
    "flask-s3>=0.3.3",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "werkzeug>=3.1.3",
    "requests>=2.31.0",
    "pandas>=2.0.0",
]
